[package]
name = "eomi_lux"
version = "0.1.0"
authors = ["yum <yumzi114@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "eomi_lux"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51" }
anyhow = "1.0.96"
esp-idf-hal = { version = "0.45.2", features = ["panic_handler"] }
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
embedded-graphics = "0.8.1"
ssd1306 = "0.9.0"
veml7700 = { version = "0.2.0", features = ["lux_as_u32"] }

[build-dependencies]
embuild = "0.33"
